# GameDemo

./: CMakeLists.txt  README.md  buildProject.py  conanfile.txt
include/: AbstractGameState.hpp  Animation.hpp  Camera.hpp  Collidable.hpp  Entity.hpp  GameObject.hpp  GameWindow.hpp  IRenderable.hpp  Player.hpp  Tile.hpp
include/Assets/: Player.hpp  TileMap.hpp
include/Core/: AbstractGameState.hpp  Camera.hpp  Engine.hpp  GameWindow.hpp  IInputable.hpp  IObject.hpp  Level_1.hpp  Player.hpp
include/ECS/: Component.hpp  Entity.hpp  GenericSystem.hpp  World.hpp
include/Graphics/: Animation.hpp  AnimationComponent.hpp  Animator.hpp  IRenderable.hpp  Sprite.hpp
include/Inputs/: IInputable.hpp  KeyboardController.hpp
include/Interfaces/: CollidableObject.hpp  Entity.hpp  GameObject.hpp  Scene.hpp
include/Physics/: BodyComponent.hpp  IBody.hpp  ICollidable.hpp  IUpdatable.hpp  RigidBody.hpp  TransformComponent.hpp  Vec2D.hpp  Vector2D.hpp
include/Scenes/: GameScene.hpp
src/: Animation.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  GameWindow.cpp  Level_1.cpp  Main.cpp  Player.cpp  Tile.cpp
src/Assets/: Player.cpp  TileMap.cpp
src/Core/: Camera.cpp  Engine.cpp  GameWindow.cpp  Level_1.cpp  Player.cpp
src/Core/Levels/: Level_1.cpp
src/ECS/: World.cpp
src/Graphics/: Animation.cpp  AnimationComponent.cpp  Animator.cpp  Sprite.cpp
src/Inputs/: KeyboardController.cpp
src/Interfaces/: CollidableObject.cpp  Entity.cpp
src/Physics/: BodyComponent.cpp  RigidBody.cpp  TransformComponent.cpp
src/Scenes/: GameScene.cpp
src/States/Levels/: Level_1.cpp
src/interfaces/: AbstractLevel.cpp  AbstractObject.cpp  BaseGame.cpp
src/utils/: RenderPool.cpp
(+13 files in other folders)
